--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ input:focus {
 }
 
 .butt {
-    margin: 15px 15px;
+    margin: 5px 10px 10px;
     border-style: solid;
     border-color: #ba30af;
     border-radius: 40px;
