--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ body {
 .bk {
     display: flex;
     flex-direction: row-reverse;
+    margin: 15px 15px;
 }
 
 .input {
@@ -56,7 +57,7 @@ input:focus {
 }
 
 .butt {
-    margin: 5px 10px 10px;
+    margin:10px 10px;
     border-style: solid;
     border-color: #ba30af;
     border-radius: 40px;
